--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 group = 'org.r4mble'
-version = '1.0.3'
+version = '1.0.2'
 
 repositories {
     mavenCentral()
     maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
+        name = "spigotmc-repo"
+        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
     }
     maven {
         name = "sonatype"
@@ -18,7 +18,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
+    compileOnly("org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT")
+    implementation 'org.jetbrains:annotations:24.0.0'
 }
 
 def targetJavaVersion = 21
